# ClickupTimeTrackingServer

./: .env  .gitignore  clickup_api_client.py  makefile  pyproject.toml  report_generator.py  time_entry_example.json
server/: app.py  clickup_api_client.py  forms.py
server/static/css/: styles.css
server/templates/: base.html  index.html  table_data.html  table_only.html
